src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/C4A70.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram C4A70 {

	enum A;
	enum B {
		;
	}
	enum C {
		ENTRY, ENTRY2;
	}
}